--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Build release apk
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: assembleDebug
+          arguments: assembleRelease
 
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
           name: apk-release
-          path: app/build/outputs/apk/debug
+          path: app/build/outputs/apk/release
 
