--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,6 @@
 android.enableJetifier=true
 android.nonTransitiveRClass=false
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M" -XX\:+HeapDumpOnOutOfMemoryError -XX\:+UseParallelGC -XX\:MaxMetaspaceSize\=1g
+android.injected.testOnly=false
+org.gradle.configuration-cache=true
